# RobotSwarm

./: .env  .gitignore  CLAUDE.md  LICENSE  README.md  asset-manifest.json  display.sh  docker-compose.prod.yml  index.html  manifest.json  package-lock.json  package.json  test.js
.github/workflows/: backend_workflow.yml  frontend_workflow.yml
SwarmBackend/: Dockerfile  Program.cs  SwarmBackend.csproj  SwarmBackend.sln  appsettings.Development.json  appsettings.json  docker-compose.local.yml
SwarmBackend/Entities/: Account.cs  RefreshToken.cs  Robot.cs  RobotGroup.cs  RobotStatus.cs  Role.cs  Sensor.cs  SensorReading.cs  SensorTypeEnum.cs  TaskLog.cs  TaskTemplate.cs  TaskTypeEnum.cs
SwarmBackend/Helpers/: DataContext.cs  EnumExtension.cs  Seed.cs  ServiceExtension.cs
SwarmBackend/Interfaces/: IAccountService.cs  IRealtimeService.cs  IRobotGroupService.cs  IRobotService.cs  ISensorReadingService.cs  ISensorService.cs  ITaskLogService.cs  ITaskTemplateService.cs
SwarmBackend/Migrations/: 20230414192503_Initial.Designer.cs  20230414192503_Initial.cs  20230415015103_AddEntities.Designer.cs  20230415015103_AddEntities.cs  20230415134715_AddTask.Designer.cs  20230415134715_AddTask.cs  20230415144639_AddTaskTemplatesSeed.Designer.cs  20230415144639_AddTaskTemplatesSeed.cs  20230423215449_AddRole.Designer.cs  20230423215449_AddRole.cs  20241014234207_TaskParameters.Designer.cs  20241014234207_TaskParameters.cs  20241015001858_TaskCancelleDate.Designer.cs  20241015001858_TaskCancelleDate.cs  20241018224053_RobotStatus.Designer.cs  20241018224053_RobotStatus.cs  20241018230313_RobotConnection.Designer.cs  20241018230313_RobotConnection.cs  20250328235655_AddRobotGroup.Designer.cs  20250328235655_AddRobotGroup.cs  20250401225847_AddRobotAccessControl.Designer.cs  20250401225847_AddRobotAccessControl.cs  (+7 more)
SwarmFrontend/: .eslintrc  README.md  package-lock.json  package.json  prompts.txt
firmware/: PID_AutoTune.h  esp32.ino  motor.ino
ros_wss/: Program.cs  Twist.cs  ros_wss.csproj
swarm_ws/src/: CMakeLists.txt
swarm_ws/src/hero_common/: README.md
swarm_ws/src/prueba/: package.xml
swarm_ws/src/robot_swarm_bridge/: CMakeLists.txt  package.xml  requirements.txt  setup.py
swarm_ws/src/robot_swarm_bridge/config/: config.yaml
swarm_ws/src/robot_swarm_bridge/launch/: arena.launch  bridge.launch  circle.launch  geoshape.launch  multi_dummy_turtlebot3.launch
swarm_ws/src/robot_swarm_bridge/msg/: RobotStatus.msg  TaskProgress.msg  TaskRequest.msg
swarm_ws/src/robot_swarm_bridge/scripts/: dummy_turtlebot3.py  initial_robot_spawner.py  robot_manager.py  robot_sensor_publisher.py  swarm_control.py  task_manager.py  test_sensor_script.py  tf_manager.py  turtlebot_font_drawer.py  turtlebot_font_drawer_debug.py
swarm_ws/src/robot_swarm_bridge/src/: bridge.py
swarm_ws/src/robot_swarm_bridge/src/handlers/: ros_handler.py  signalr_handler.py
swarm_ws/src/robot_swarm_bridge/src/robot_swarm_bridge/: __init__.py  bridge.py
swarm_ws/src/robot_swarm_bridge/src/robot_swarm_bridge/handlers/: __init__.py  ros_handler.py  signalr_handler.py
swarm_ws/src/robot_swarm_bridge/src/robot_swarm_bridge/utils/: config.py  logger.py
swarm_ws/src/robot_swarm_bridge/srv/: AssignTask.srv  DeleteRobot.srv  SpawnRobot.srv
swarm_ws/src/urdf/: transportable_object.xacro  turtlebot_arena.xacro
(+356 files in other folders)
